Fix overlapping side navs

--- a/clogMonitor/src/components/NavigationPane/NavigationPane.css
+++ b/clogMonitor/src/components/NavigationPane/NavigationPane.css
@@ -6,15 +6,17 @@
   display: none;
 }
 
-.NavigationPane__links {
-  flex-grow: 1;
+.NavigationPane__li {
+  background-color: inherit !important;
+  color: rgb(82, 152, 68) !important;
 }
 
-.NavigationPane__link {
-  font-weight: normal;
-  color: #116e1f !important;
+.NavigationPane__li:hover {
+  background-color: rgb(43, 95, 33) !important;
+  /* color: #116e1f !important; */
+  color: rgb(82, 152, 68) !important;
 }
 
-.NavigationPane__link:hover {
+/* .NavigationPane__link:hover {
   color: rgb(112, 189, 97) !important;
-}
+} */
